# SquaredEuclidean

./: README.md
Felix/batched_eigen/: compile.sh  test1.cpp
Felix/batched_eigen_low_precision/: euclidean  test1.cpp
Felix/eigen/: test1.cpp
Felix/eigen_low_precision/: test1.cpp
Tobias/sqnorm/: CMakeLists.txt  compile.sh  test.cpp
